Fixed Navbar Collapse issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,9 +18,6 @@ p {
 }
 
 /* Container Section */
-.container-fluid {
-  padding: 7% 15%;
-}
 
 /* Sections */
 
